
IMPROVEMENTS

PIG-3552: UriUtil used by reducer estimator should support viewfs (amatsukawa via aniket486)

PIG-3549: Print hadoop jobids for failed, killed job (aniket486)

PIG-3047: Check the size of a relation before adding it to distributed cache in Replicated join (aniket486)

PIG-3480: TFile-based tmpfile compression crashes in some cases (dvryaboy via aniket486)

BUG FIXES

PIG-2629: Wrong Usage of Scalar which is null causes high namenode operation (rohini)

PIG-3593: Import jython standard module fail on cluster (daijy)

PIG-3576: NPE due to PIG-3549 when job never gets submitted (lbendig via cheolsoo)

PIG-3567: LogicalPlanPrinter throws OOM for large scripts (aniket486)

PIG-3579: pig.script's deserialized version does not maintain line numbers (jgzhang via aniket486)

PIG-3570: Rollback PIG-3060 (daijy)

PIG-3530: Some e2e tests is broken due to PIG-3480 (daijy)

PIG-3492: ColumnPrune dropping used column due to LogicalRelationalOperator.fixDuplicateUids changes not propagating (knoguchi via daijy)

PIG-3325: Adding a tuple to a bag is slow (dvryaboy via aniket486)

PIG-3512: Reducer estimater is broken by PIG-3497 (daijy)

PIG-3510: New filter extractor fails with more than one filter statement (aniket486 via cheolsoo)

Release 0.12.0

INCOMPATIBLE CHANGES

PIG-3082: outputSchema of a UDF allows two usages when describing a Tuple schema (jcoveney)

PIG-3191: [piggybank] MultiStorage output filenames are not sortable (Danny Antonelli via jcoveney)

PIG-3174: Remove rpm and deb artifacts from build.xml (gates)

IMPROVEMENTS

PIG-3503: More document for Pig 0.12 new features (daijy)

PIG-3445: Make Parquet format available out of the box in Pig (lbendig via aniket486)

PIG-3483: Document ASSERT keyword (aniket486 via daijy)

PIG-3470: Print configuration variables in grunt (lbendig via daijy)

PIG-3493: Add max/min for datetime (tyro89 via daijy)
