@@ -347,6 +347,9 @@ public class Util {
 
     static public void createInputFile(FileSystem fs, String fileName,
             String[] inputData) throws IOException {
+        if(Util.WINDOWS){
+            fileName = fileName.replace('\\','/');
+        }
         if(fs.exists(new Path(fileName))) {
             throw new IOException("File " + fileName + " already exists on the FileSystem");
         }
@@ -361,6 +364,9 @@ public class Util {
     }
 
     static public String[] readOutput(FileSystem fs, String fileName) throws IOException {
+        if(Util.WINDOWS){
+            fileName = fileName.replace('\\','/');
+        }
         Path path = new Path(fileName);
         if(!fs.exists(path)) {
             throw new IOException("Path " + fileName + " does not exist on the FileSystem");
@@ -404,6 +410,9 @@ public class Util {
     static public OutputStream createInputFile(MiniCluster cluster,
             String fileName) throws IOException {
         FileSystem fs = cluster.getFileSystem();
+        if(Util.WINDOWS){
+            fileName = fileName.replace('\\','/');
+        }
         if (fs.exists(new Path(fileName))) {
             throw new IOException("File " + fileName
                     + " already exists on the minicluster");
@@ -437,6 +446,9 @@ public class Util {
     static public void deleteFile(MiniCluster miniCluster, String fileName)
     throws IOException {
         FileSystem fs = miniCluster.getFileSystem();
+        if(Util.WINDOWS){
+            fileName = fileName.replace('\\','/');
+        }
         fs.delete(new Path(fileName), true);
     }
 
@@ -445,6 +457,9 @@ public class Util {
         Configuration conf = ConfigurationUtil.toConfiguration(
                 pigContext.getProperties());
         FileSystem fs = FileSystem.get(conf);
+        if(Util.WINDOWS){
+            fileName = fileName.replace('\\','/');
+        }
         fs.delete(new Path(fileName), true);
     }
 
@@ -453,6 +468,9 @@ public class Util {
         Configuration conf = ConfigurationUtil.toConfiguration(
                 pigContext.getProperties());
         FileSystem fs = FileSystem.get(conf);
+        if(Util.WINDOWS){
+            fileName = fileName.replace('\\','/');
+        }
         return fs.exists(new Path(fileName));
     }
 
@@ -585,6 +603,10 @@ public class Util {
 	 * @throws IOException
 	 */
 	static public void copyFromLocalToCluster(MiniCluster cluster, String localFileName, String fileNameOnCluster) throws IOException {
+        if(Util.WINDOWS){
+            localFileName = localFileName.replace('\\','/');
+            fileNameOnCluster = fileNameOnCluster.replace('\\','/');
+        }
         PigServer ps = new PigServer(ExecType.MAPREDUCE, cluster.getProperties());
         String script = getMkDirCommandForHadoop2_0(fileNameOnCluster) + "fs -put " + localFileName + " " + fileNameOnCluster;
 
@@ -600,6 +622,10 @@ public class Util {
 
     static public void copyFromLocalToLocal(String fromLocalFileName,
             String toLocalFileName) throws IOException {
+        if(Util.WINDOWS){
+            fromLocalFileName = fromLocalFileName.replace('\\','/');
+            toLocalFileName = toLocalFileName.replace('\\','/');
+        }
         PigServer ps = new PigServer(ExecType.LOCAL, new Properties());
         String script = getMkDirCommandForHadoop2_0(toLocalFileName) + "fs -cp " + fromLocalFileName + " " + toLocalFileName;
 
@@ -617,6 +643,10 @@ public class Util {
     }
 
 	static public void copyFromClusterToLocal(MiniCluster cluster, String fileNameOnCluster, String localFileName) throws IOException {
+        if(Util.WINDOWS){
+            fileNameOnCluster = fileNameOnCluster.replace('\\','/');
+            localFileName = localFileName.replace('\\','/');
+        }
 	    File parent = new File(localFileName).getParentFile();
 	    if (!parent.exists()) {
 	        parent.mkdirs();
@@ -677,6 +707,9 @@ public class Util {
 
     public static String generateURI(String filename, PigContext context)
             throws IOException {
+        if(Util.WINDOWS){
+            filename = filename.replace('\\','/');
+        }
         if (context.getExecType() == ExecType.MAPREDUCE) {
             return FileLocalizer.hadoopify(filename, context);
         } else if (context.getExecType() == ExecType.LOCAL) {
